--- a/styles/themes/blockframes.scss
+++ b/styles/themes/blockframes.scss
@@ -76,7 +76,7 @@ $light-theme: (
     ),
   ),
   background: (
-    900: #f4f4f4,
+    900: #fafbff,
     800: #ffffff,
     700: #fdfdfd,
     600: #e7e7e7,
