--- a/libs/movie/src/lib/movie/form/filters/languages/language-filter.component.html
+++ b/libs/movie/src/lib/movie/form/filters/languages/language-filter.component.html
@@ -1,9 +1,4 @@
-<!--
-  <chips-autocomplete scope="languages" placeholder="Language" [form]="form.get('languages')" [withoutValues]="['all']" test-id="language">
-    <mat-label>Enter Languages</mat-label>
-  </chips-autocomplete>
--->
-<scope-multiselect></scope-multiselect>
+<scope-multiselect scope="languages"  placeholder="Select Languages" [control]="form.get('languages')"></scope-multiselect>
 
 <ng-container *ngFor="let item of items | keyvalue: keepOrder">
   <mat-checkbox [formControl]="form.get('versions').get(item.key)" [value]="item.key" color="primary" [attr.test-id]="item.value">
