--- a/libs/ui/src/lib/static-autocomplete/scope/scope-multiselect.component.html
+++ b/libs/ui/src/lib/static-autocomplete/scope/scope-multiselect.component.html
@@ -1,17 +1,13 @@
-<mat-form-field>
-  <input type="text" placeholder="Select Languages" matInput [matAutocomplete]="auto" [formControl]="control" />
-</mat-form-field>
-
-<mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-  <mat-option *ngFor="let language of filteredLanguages | async" [value]="selectedLanguages">
-    <div (click)="optionClicked($event, language)">
-      <mat-checkbox
-        [checked]="selectedLanguages.includes(language)"
-        (change)="toggleSelection(language)"
-        (click)="$event.stopPropagation()"
-      >
-        {{ languagesObject[language] }}
-      </mat-checkbox>
-    </div>
-  </mat-option>
-</mat-autocomplete>
+<mat-select multiple [formControl]="control" (openedChange)="resetSearch()">
+  <header>
+    <mat-checkbox [checked]="checked | async"  [indeterminate]="indeterminate | async" (change)="checkAll($event.checked)"></mat-checkbox>
+    <input [placeholder]="placeholder" [formControl]="search" />
+  </header>
+  <ng-container *ngIf="visible | async as isVisible">
+    <ng-container *ngFor="let item of items">
+      <mat-option [value]="item" [ngClass]="{hidden: !isVisible[item]}">
+        {{item | toLabel: scope}}
+      </mat-option>
+    </ng-container>
+  </ng-container>
+</mat-select>
