--- a/styles/themes/builder.scss
+++ b/styles/themes/builder.scss
@@ -112,6 +112,10 @@
     $mat-surface-shadow: rgba(map.get($foreground, 800), 0.20);
   }
 
+  $mat-dashboard-cta: rgba(map.get($primary, 800), 0.1);
+  @if $is-dark {
+    $mat-dashboard-cta: rgba(map.get($primary, 500), 0.1);
+  }
 
   //////////
   // FONT //
@@ -145,6 +149,7 @@
     background: $mat-background,
     font: $font,
     shadow: $mat-surface-shadow,
+    dashboard-cta: $mat-dashboard-cta,
   );
 
   @return (
@@ -197,6 +202,7 @@
   $background: map.get($config, 'background');
   $foreground: map.get($config, 'foreground');
   $shadow: map.get($config, 'shadow');
+  $dashboard-cta: map.get($config, 'dashboard-cta');
   $primary: map.get($config, 'primary');
   $accent: map.get($config, 'accent');
   $warn: map.get($config, 'warn');
@@ -225,5 +231,8 @@
   --primary-lighter-contrast: #{mat.get-color-from-palette($primary, 'lighter-contrast')};
   // Shadow
   --card-shadow: #{$shadow};
+
+  // Dashboard Main CTA background color
+  --dashboard-cta: #{$dashboard-cta};
 }
 
