--- a/apps/festival/festival/src/app/dashboard/title/view/view.component.html
+++ b/apps/festival/festival/src/app/dashboard/title/view/view.component.html
@@ -1,6 +1,6 @@
 <title-dashboard-shell *ngIf="movie$ | async as movie" [routes]="navLinks">
   <movie-cta fxLayout="column" fxLayout.lt-md="row" fxLayoutAlign="space-between end" fxFlex>
-    <a *ngIf="(org$ | async | canAccess: 'marketplace': 'festival') && movie.app.festival.status !== 'archived'" mat-button color="primary" [routerLink]="['/c/o/marketplace/title', movie.id, 'main']">
+    <a *ngIf="(org$ | async | canAccess: 'marketplace': 'festival') && movie.app.festival.status !== 'archived'" mat-button color="primary" [routerLink]="['/c/o/marketplace/title', movie.id, 'main']" class="main-dashboard-cta">
       <mat-icon svgIcon="visibility" color="primary"></mat-icon>
       <span>Marketplace Preview</span>
     </a>
