add edit link button

--- a/libs/movie/src/lib/movie/dashboard/shell/shell.component.html
+++ b/libs/movie/src/lib/movie/dashboard/shell/shell.component.html
@@ -6,7 +6,12 @@
     <section fxLayout fxLayout.lt-md="column" fxLayoutGap="16px">
       <ng-container *ngIf="movie$ | async as movie">
         <section fxLayout fxLayoutGap="16px" fxFlex>
-          <img fxHide.xs [ref]="movie.poster" asset="empty_poster.svg" alt="movie poster">
+          <div class="poster-container">
+            <img fxHide.xs [ref]="movie.poster" asset="empty_poster.svg" alt="movie poster">
+            <a *ngIf="editRoute !== undefined" mat-mini-fab color="primary" [routerLink]="editRoute">
+              <mat-icon svgIcon="edit"></mat-icon>
+            </a>
+          </div>
 
           <article fxLayout="column" fxFlex>
             <h4>{{ movie | movieFeature }}</h4>
