--- a/libs/movie/src/lib/movie/dashboard/shell/shell.component.scss
+++ b/libs/movie/src/lib/movie/dashboard/shell/shell.component.scss
@@ -9,7 +9,6 @@ header {
   img {
     height: 100%;
     max-height: 275px;
-    margin-right: 16px;
     border-radius: 5px;
   }
 }
@@ -41,4 +40,15 @@ h1 {
 
 h6 {
   margin-top: 8px;
+}
+
+.poster-container {
+  position: relative;
+  margin-right: 16px;
+
+  a {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+  }
 }
