--- a/apps/waterfall/waterfall/src/app/dashboard/title/view/view.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/view/view.component.html
@@ -1,6 +1,7 @@
 <title-dashboard-shell *ngIf="movie$ | async as movie" [routes]="navLinks">
   <movie-cta fxLayout="column" fxLayout.lt-md="row" fxLayoutAlign="space-between end" fxFlex>
-    <a mat-button color="primary" [routerLink]="['/c/o/dashboard/avails/select', movie.id, 'manage']" class="main-dashboard-cta">
+    <!-- TODO issue#9355 change routerLink to the new pages -->
+    <a mat-button color="primary" routerLink="." class="main-dashboard-cta">
       <mat-icon svgIcon="group"></mat-icon>
       <span>Rights Holders Management</span>
     </a>
