--- a/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
@@ -32,36 +32,12 @@
       </ng-container>
     </header>
 
-    <bf-table [source]="result$ | async" useFilter pagination="50">
-      <ng-template colRef="title.international" label="Title" let-title let-movie="item" sort defaultSort [filter]="filters.movieTitle">
-        <a [routerLink]="movie.id" [matTooltip]="title">
-          <u>{{ title | maxLength:50 }}</u>
-        </a>
-      </ng-template>
-      <ng-template colRef="directors" label="Director(s)" let-directors [filter]="filters.movieDirectors">
-        <span (click)="openDetails('Director\'s', directors)">
-          {{ directors | displayName | maxLength:50 }}
-        </span>
-      </ng-template>
-      <ng-template colRef="release.year" label="Release Year" let-year sort>
-        {{ year }}
-      </ng-template>
-      <ng-template colRef="id" label="#Sales (Total Gross Receipt)" let-titleId>
-        <ng-container *ngIf="titleId | getIncomesFromTitle | async as incomes">
-          {{ incomes.length }}
-          <ng-container *ngIf="incomes.length > 0; else noIncome">
-            ({{ incomes | sum : 'price' | currency:incomes[0].currency }})
-          </ng-container>
-          <ng-template #noIncome>($0)</ng-template>
-        </ng-container>
-      </ng-template>
-      <ng-template colRef="app.catalog.status" label="Status" let-status>
-        <bf-tag>{{ status | toLabel: 'storeStatus' }}</bf-tag>
-      </ng-template>
-      <ng-template colRef label="Actions" let-movie sticky>
-        <dashboard-movie-table-actions [movie]="movie"></dashboard-movie-table-actions>
-      </ng-template>
-    </bf-table>
+    <movie-grid 
+      *ngIf="(result$ | async) as results" 
+      [titles]="results" 
+      [columns]="['title.international','directors','release.year','id','app.catalog.status', 'Actions']">
+    </movie-grid>
+
   </ng-container>
 </ng-container>
 
