--- a/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
+++ b/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
@@ -22,25 +22,11 @@
       </ng-container>
     </header>
 
-    <bf-table [source]="titles" useFilter pagination="50">
-      <ng-template colRef="title.international" label="Title" let-title let-movie="item" sort defaultSort [filter]="filters.movieTitle">
-        <a [routerLink]="movie.id" [matTooltip]="title">
-          <u>{{ title | maxLength:50 }}</u>
-        </a>
-      </ng-template>
-      <ng-template colRef="productionStatus" label="Production Status" let-prod>{{ prod | toLabel: 'productionStatus'
-        }}</ng-template>
-      <ng-template colRef="campaign.cap" label="Goal Funding" let-cap let-movie="item" sort>
-        {{ cap ? (cap | currency : movie.campaign.currency : 'symbol' : '1.0-0') : '-' }}
-      </ng-template>
-      <ng-template colRef="campaign.received" label="Funding Raised" let-received let-movie="item" sort>
-        {{ received ? (received | currency : movie.campaign.currency : 'symbol' : '1.0-0') : '-' }}
-      </ng-template>
-      <ng-template colRef="campaignStarted" label="Campaign Started" let-date sort>{{ date | date: 'short' }}</ng-template>
-      <ng-template colRef label="Actions" let-movie sticky>
-        <dashboard-movie-table-actions [movie]="movie"></dashboard-movie-table-actions>
-      </ng-template>
-    </bf-table>
+    <movie-grid 
+      [titles]="titles" 
+      [columns]="['title.international', 'productionStatus','campaign.cap','campaign.received','campaignStarted', 'Actions']">
+    </movie-grid>
+
   </ng-container>
 </ng-container>
 
