--- a/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
+++ b/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
@@ -22,10 +22,10 @@
       </ng-container>
     </header>
 
-    <movie-grid 
+    <movie-table-grid 
       [titles]="titles" 
       [columns]="['title.international', 'productionStatus','campaign.cap','campaign.received','campaignStarted', 'Actions']">
-    </movie-grid>
+    </movie-table-grid>
 
   </ng-container>
 </ng-container>
