--- a/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
@@ -32,11 +32,11 @@
       </ng-container>
     </header>
 
-    <movie-grid 
+    <movie-table-grid 
       *ngIf="(result$ | async) as results" 
       [titles]="results" 
       [columns]="['title.international','directors','release.year','id','app.catalog.status', 'Actions']">
-    </movie-grid>
+    </movie-table-grid>
 
   </ng-container>
 </ng-container>
