--- a/apps/festival/festival/src/app/dashboard/title/list/list.component.html
+++ b/apps/festival/festival/src/app/dashboard/title/list/list.component.html
@@ -27,27 +27,12 @@
       </ng-container>
     </header>
 
-    <bf-table [source]="result$ | async" pagination="50" useFilter>
-      <ng-template colRef="title.international" label="Title" let-title let-movie="item" sort [filter]="filters.movieTitle">
-        <a [routerLink]="movie.id" [matTooltip]="title">
-          <u>{{ title | maxLength:50 }}</u>
-        </a>
-      </ng-template>
-      <ng-template colRef="directors" label="Director(s)" let-directors [filter]="filters.movieDirectors">
-        <span (click)="openDetails('Director\'s', directors)">
-          {{ directors | displayName | maxLength:50 }}
-        </span>
-      </ng-template>
-      <ng-template colRef="productionStatus" label="Production Status" let-prod sort>
-        {{ prod | toLabel: 'productionStatus' }}
-      </ng-template>
-      <ng-template colRef="app.festival.status" label="Status" let-status>
-        <bf-tag>{{ status | toLabel: 'storeStatus' }}</bf-tag>
-      </ng-template>
-      <ng-template colRef label="Actions" let-movie sticky>
-        <dashboard-movie-table-actions [movie]="movie"></dashboard-movie-table-actions>
-      </ng-template>
-    </bf-table>
+    <movie-table-grid 
+      *ngIf="(result$ | async) as results" 
+      [titles]="results" 
+      [columns]="['title.international','directors','productionStatus','app.festival.status','Actions']">
+    </movie-table-grid>
+
   </ng-container>
 </ng-container>
 
