add demo pages & demo graph

--- a/apps/waterfall/waterfall/src/app/dashboard/title/budget/budget.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/budget/budget.component.html
@@ -1,1 +1,3 @@
-<p>TODO</p>
+<!-- TODO remove the image form the assets folder -->
+<img src="/assets/images/demo-cannes/budget-1.png" />
+<img src="/assets/images/demo-cannes/budget-2.png" />
