--- a/apps/waterfall/waterfall/src/app/dashboard/title/charts/charts.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/charts/charts.component.html
@@ -1,1 +1,3 @@
-<p>TODO</p>
+<!-- TODO remove the image form the assets folder -->
+<img src="/assets/images/demo-cannes/chart-1.png" />
+<img src="/assets/images/demo-cannes/chart-2.png" />
