added poster on all apps and added grid view on waterfall

--- a/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
+++ b/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
@@ -24,7 +24,7 @@
 
     <movie-table-grid 
       [titles]="titles" 
-      [columns]="['title.international', 'productionStatus','campaign.cap','campaign.received','campaignStarted', 'Actions']">
+      [columns]="['poster','title.international', 'productionStatus','campaign.cap','campaign.received','campaignStarted', 'Actions']">
     </movie-table-grid>
 
   </ng-container>
