--- a/libs/movie/src/lib/movie/dashboard/table-grid/table-grid.component.scss
+++ b/libs/movie/src/lib/movie/dashboard/table-grid/table-grid.component.scss
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+}
+
 article {
   display: flex;
   place-content: stretch flex-start;
@@ -11,12 +15,9 @@ article {
   }
 }
 
-section {
-  padding: clamp(8px, 3vw, 24px);
-  width: 100%;
-  img {
-    width: 500px;
-  }
+.poster {
+  margin-top: 8px;
+  width: 35px;
 }
 
 mat-form-field {
