--- a/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
@@ -35,7 +35,7 @@
     <movie-table-grid 
       *ngIf="(result$ | async) as results" 
       [titles]="results" 
-      [columns]="['title.international','directors','release.year','id','app.catalog.status', 'Actions']">
+      [columns]="['poster','title.international','directors','release.year','id','app.catalog.status', 'Actions']">
     </movie-table-grid>
 
   </ng-container>
