--- a/apps/festival/festival/src/app/dashboard/title/list/list.component.html
+++ b/apps/festival/festival/src/app/dashboard/title/list/list.component.html
@@ -30,7 +30,7 @@
     <movie-table-grid 
       *ngIf="(result$ | async) as results" 
       [titles]="results" 
-      [columns]="['title.international','directors','productionStatus','app.festival.status','Actions']">
+      [columns]="['poster','title.international','directors','productionStatus','app.festival.status','Actions']">
     </movie-table-grid>
 
   </ng-container>
