--- a/apps/catalog/catalog/src/app/dashboard/title/view/view.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/view/view.component.html
@@ -1,4 +1,4 @@
-<title-dashboard-shell *ngIf="movie$ | async as movie" [routes]="navLinks">
+<title-dashboard-shell *ngIf="movie$ | async as movie" [routes]="navLinks" [editRoute]="['/c/o/dashboard/tunnel/movie', movie.id, 'main']">
   <movie-cta fxLayout="column" fxLayout.lt-md="row" fxLayoutAlign="space-between end" fxFlex>
     <a mat-button color="primary" [routerLink]="['/c/o/dashboard/avails/select', movie.id, 'manage']" class="main-dashboard-cta">
       Manage Avails
