--- a/libs/movie/src/lib/movie/form/filters/languages/language-filter.component.html
+++ b/libs/movie/src/lib/movie/form/filters/languages/language-filter.component.html
@@ -1,6 +1,10 @@
-<scope-multiselect scope="languages" label="Select Languages" filterPlaceholder="Specify language to filter"
-  [control]="form.get('languages')"
-></scope-multiselect>
+<scope-multiselect
+  scope="languages"
+  label="Select Languages"
+  selectIcon="translate"
+  filterPlaceholder="Specify language to filter"
+  [control]="form.get('languages')">
+</scope-multiselect>
 
 <ng-container *ngFor="let item of items | keyvalue: keepOrder">
   <mat-checkbox [formControl]="form.get('versions').get(item.key)" [value]="item.key" color="primary" [attr.test-id]="item.value">
