--- a/libs/ui/src/lib/static-autocomplete/scope/scope-multiselect.component.html
+++ b/libs/ui/src/lib/static-autocomplete/scope/scope-multiselect.component.html
@@ -1,8 +1,14 @@
 <mat-form-field appearance="outline">
-  <mat-label>{{label}}</mat-label>
+  <mat-label>{{ label }}</mat-label>
+  <mat-icon matPrefix [svgIcon]="selectIcon"></mat-icon>
   <mat-select multiple [formControl]="control" (openedChange)="resetSearch()">
     <header>
-      <mat-checkbox color="primary" [checked]="checked | async"  [indeterminate]="indeterminate | async" (change)="checkAll($event.checked)"></mat-checkbox>
+      <mat-checkbox
+        color="primary"
+        [checked]="checked | async"
+        [indeterminate]="indeterminate | async"
+        (change)="checkAll($event.checked)"
+      ></mat-checkbox>
       <input [placeholder]="filterPlaceholder" [formControl]="search" />
       <mat-icon *ngIf="!search.value" svgIcon="search"></mat-icon>
       <button *ngIf="!!search.value" mat-icon-button type="button" (click)="search.reset('')" matTooltip="Clear text">
@@ -11,8 +17,8 @@
     </header>
     <ng-container *ngIf="visible | async as isVisible">
       <ng-container *ngFor="let item of items">
-        <mat-option [value]="item" [ngClass]="{hidden: !isVisible[item]}">
-          {{item | toLabel: scope}}
+        <mat-option [value]="item" [ngClass]="{ hidden: !isVisible[item] }">
+          {{ item | toLabel: scope }}
         </mat-option>
       </ng-container>
     </ng-container>
