--- a/apps/financiers/financiers/src/app/marketplace/title/list/list.component.html
+++ b/apps/financiers/financiers/src/app/marketplace/title/list/list.component.html
@@ -33,9 +33,13 @@
     </ng-template>
 
     <ng-template filter label="Genre" [form]="searchForm.genres">
-      <chips-autocomplete [form]="searchForm.genres" scope="genres">
-        <mat-label>Genres</mat-label>
-      </chips-autocomplete>
+      <scope-multiselect
+        scope="genres"
+        label="Select Genres"
+        selectIcon="style"
+        filterPlaceholder="Specify genre to filter"
+        [control]="searchForm.genres">
+      </scope-multiselect>
     </ng-template>
 
     <ng-template filter label="Country of Origin" [form]="searchForm.originCountries">
