added poster on all apps and added grid view on waterfall (#9349)
* added poster on all apps and added grid view on waterfall

* last updates for cannes

* fix e2e test

---------

Co-authored-by: bruce <delorme.bruce.michel@gmail.com>

--- a/libs/movie/src/lib/movie/dashboard/table-grid/table-grid.component.scss
+++ b/libs/movie/src/lib/movie/dashboard/table-grid/table-grid.component.scss
@@ -1,5 +1,9 @@
 @import '@angular/flex-layout/mq';
 
+:host {
+  width: 100%;
+}
+
 article {
   display: flex;
   place-content: stretch flex-start;
@@ -15,12 +19,9 @@ article {
   }
 }
 
-section {
-  padding: clamp(8px, 3vw, 24px);
-  width: 100%;
-  img {
-    width: 500px;
-  }
+.poster {
+  margin-top: 8px;
+  width: 35px;
 }
 
 mat-form-field {
