default grid view on waterfall

--- a/apps/waterfall/waterfall/src/app/dashboard/home/home.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/home/home.component.html
@@ -12,7 +12,8 @@
 
     <movie-table-grid 
       [titles]="titles" 
-      [columns]="['poster','title.international','directors']">
+      [columns]="['poster','title.international','directors']"
+      mode="grid">
     </movie-table-grid>
 
   </ng-container>
