update festivals icon

--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -77,7 +77,7 @@
       <scope-multiselect
         scope="festival"
         label="Select Festivals"
-        selectIcon="theaters"
+        selectIcon="social_leaderboard"
         filterPlaceholder="Specify festival to filter"
         [control]="searchForm.festivals">
       </scope-multiselect>
