--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -82,7 +82,7 @@
       <scope-multiselect
         scope="festival"
         label="Select Festivals"
-        selectIcon="theaters"
+        selectIcon="social_leaderboard"
         filterPlaceholder="Specify festival to filter"
         [control]="searchForm.festivals">
       </scope-multiselect>
