--- a/libs/ui/src/lib/static-autocomplete/scope/scope-multiselect.component.html
+++ b/libs/ui/src/lib/static-autocomplete/scope/scope-multiselect.component.html
@@ -1,7 +1,7 @@
 <mat-form-field appearance="outline">
   <mat-label>{{ label }}</mat-label>
   <mat-icon matPrefix [svgIcon]="selectIcon"></mat-icon>
-  <mat-select multiple [formControl]="control" (openedChange)="resetSearch()">
+  <mat-select multiple [formControl]="control" (openedChange)="resetSearch()" test-id="filter-select">
     <header>
       <mat-checkbox
         color="primary"
@@ -17,7 +17,7 @@
     </header>
     <ng-container *ngIf="visible | async as isVisible">
       <ng-container *ngFor="let item of items">
-        <mat-option [value]="item" [ngClass]="{ hidden: !isVisible[item] }">
+        <mat-option [value]="item" [ngClass]="{ hidden: !isVisible[item] }" [attr.test-id]="'option_' + item">
           {{ item | toLabel: scope }}
         </mat-option>
       </ng-container>
