fix PR comments

--- a/libs/ui/src/lib/static-autocomplete/scope/scope-multiselect.component.html
+++ b/libs/ui/src/lib/static-autocomplete/scope/scope-multiselect.component.html
@@ -5,8 +5,8 @@
     <header>
       <mat-checkbox
         color="primary"
-        [checked]="checked | async"
-        [indeterminate]="indeterminate | async"
+        [checked]="checked$ | async"
+        [indeterminate]="indeterminate$ | async"
         (change)="checkAll($event.checked)"
       ></mat-checkbox>
       <input [placeholder]="filterPlaceholder" [formControl]="search" />
